tests/ui/consts/min_const_fn/cmp_fn_pointers.stderr
error: pointers cannot be reliably compared during const eval
  --> $DIR/cmp_fn_pointers.rs:2:14
   |
LL |     unsafe { x == y }
   |              ^^^^^^
   |
   = note: see issue #53020 <https://github.com/rust-lang/rust/issues/53020> for more information

error: aborting due to 1 previous error

